methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:23: error: value A is not a member of object java.awt.Color
  if (getCouleurSol()==Color.A){
                             ^